--- a/index.html
+++ b/index.html
@@ -11,115 +11,23 @@
    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i|Tinos:400,400i&amp;subset=cyrillic"
       rel="stylesheet">
    <link rel="stylesheet" href="css/main.min.css">
-   <link rel="stylesheet" href="css/variables.css">
-   <!-- <script type="text/javascript" src="/shared/3rdparty/jquery/jquery.js" language="javascript1.1"></script> -->
-   <!-- <script src="index.js"></script> -->
 </head>
 
 <body>
-   <h1><!--Игровое поле-->Field</h1>
+   <h1>Игровое поле</h1>
    <div class="field-box">
       <div class="field">
-         <div class="tileP"></div>
+         <div class="tileP">
+            <div class="health" style="width: 10%;"></div>
+         </div>
          <div class="tile"></div>
          <div class="tile"></div>
          <div class="tile"></div>
          <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileSW"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileHP"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileSW"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileHP"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileSW"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileHP"></div>
-         <div class="tileSW"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileHP"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileHP"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileHP"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileHP"></div>
+         <div class="tileE"></div>
+
+
+
       </div>
    </div>
    <div class="cl"></div>
@@ -127,7 +35,6 @@
 		<div class="inventory-box"><div class="inventory"></div></div-->
 
    <script src="index.js">
-
       // var game = new Game();
       // game.init();
    </script>
