доделал передвижение и атаки игрока/врагов

--- a/index.html
+++ b/index.html
@@ -14,21 +14,9 @@
 </head>
 
 <body>
-   <!-- <h1>Игровое поле</h1> -->
+   <h1>Игровое поле</h1>
    <div class="field-box">
-      <div class="field">
-         <!-- <div class="tileP">
-            <div class="health" style="width: 10%;"></div>
-         </div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tile"></div>
-         <div class="tileE"></div> -->
-
-
-
-      </div>
+      <div class="field"></div>
    </div>
    <div class="cl"></div>
    <!--h1>Инвентарь</h1>
