--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
 </head>
 
 <body>
-   <h1>Игровое поле</h1>
-   <div class="field-box">
-      <div class="field"></div>
-   </div>
-   <div class="cl"></div>
-   <!--h1>Инвентарь</h1>
-		<div class="inventory-box"><div class="inventory"></div></div-->
+   <div class="container">
+      <h1>Игровое поле</h1>
 
-   <script src="index.js">
-      // var game = new Game();
-      // game.init();
-   </script>
+      <div class="field-box">
+         <div class="field"></div>
+
+         <div class="end">
+            <h2>Нажмите <br>SPACE<br>чтобы начать игру</h2>
+         </div>
+      </div>
+   </div>
+
+
+   <script src="index.js"></script>
 </body>
 
 </html>
